[workspace]

members = [ "port_sniffer","snake", "win_keylogger"]
resolver = "2"

[workspace.dependencies]
rand = "0.8"
piston_window = "0.117.0"
# chrono = "0.4"
# serde = "1.0"
serde_derive = "1.0"
# serde_json = "1.0"
sha2 = "0.10.1"
iron = "0.6.1"
router = "0.6"
logger = "0.4"
env_logger = "0.7"
serde = { version ="1.0.101", features = ["derive"]}
serde_json = "1.0.41"
chrono = { version = "0.4.9", features = ["serde"] }
uuid = { version = "0.7.4", features = ["v4", "serde"] }
# rust pong game
piston = "0.35.0"
piston2d-graphics = "0.24.0"
pistoncore-glutin_window = "0.43.0"
piston2d-opengl_graphics = "0.50.0"
